--- a/package.json
+++ b/package.json
@@ -30,13 +30,11 @@
     "discord",
     "bot"
   ],
-  "type": "module",
   "devDependencies": {
     "pnpm": "^9.7.1"
   },
   "dependencies": {
     "discord.js": "14.15.3",
-    "dotenv": "16.4.5",
-    "sunar": "0.5.0"
+    "dotenv": "16.4.5"
   }
 }
